--- a/Pages/Tailor/tailorProfile.css
+++ b/Pages/Tailor/tailorProfile.css
@@ -1,6 +1,119 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+@font-face {
+  font-family: myFont;
+  src: url("../../Assets/fonts/NeueHansKendrick-Regular.ttf");
+}
 .profile_img {
-  width: 150px;
-  height: 150px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   object-fit: cover;
+}
+.modal-backdrop {
+  display: none !important;
+}
+.heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+.heading h1 {
+  font-weight: 800;
+  font-family: myFont;
+}
+.subHeading h4 {
+  font-weight: 400;
+  font-family: myFont;
+}
+.image_carousel {
+  width: 100%;
+  height: 80vh;
+  object-fit: cover;
+}
+.carousel-item img {
+  width: 100%;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+
+.left {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  top: 0px;
+}
+.container-fluid,
+.row,
+.col-md-6 {
+  margin: 0;
+  padding: 0;
+}
+
+.right {
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 30px;
+  gap: 10px;
+}
+.des {
+  font-size: 20px;
+  font-weight: 200;
+  font-family: myFont;
+}
+.tailor_profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 30px;
+  gap: 10px;
+}
+/* Add margin and padding to labels in the modal */
+.modal label {
+  margin: 5px 0; /* Adjust the margin as needed */
+  padding: 5px; /* Adjust the padding as needed */
+}
+/* Add margin to the entire modal */
+.modal-content {
+  width: 20%;
+  padding: 20px; /* Adjust the margin as needed */
+  background-color: aqua;
+}
+/* The alert message box */
+.alert {
+  padding: 20px;
+  background-color: #f44336; /* Red */
+  color: white;
+  margin-bottom: 15px;
+  position: sticky;
+  z-index: 1;
+}
+
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
 }
