--- a/Pages/Customer/styles.css
+++ b/Pages/Customer/styles.css
@@ -1,11 +1,14 @@
 /* styles.css */
+@font-face {
+  font-family: myFont;
+  src: url("../../Assets/fonts/NeueHansKendrick-Regular.ttf");
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: "Inter", sans-serif;
 }
 header {
   background-color: #000000;
@@ -13,6 +16,7 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 10px 20px;
+  font-family: myFont;
 }
 
 .logo {
@@ -82,14 +86,17 @@ header {
 .card-body {
   margin-top: 5px;
   padding: 0 !important;
+  font-family: myFont;
 }
 .card-body h5 {
-  font-size: 15px;
+  font-size: 20px;
   font-family: "Inter", sans-serif;
+  font-family: myFont;
 }
 .card-body p {
-  font-size: 13px;
+  font-size: 16px;
   font-family: "Inter", sans-serif;
+  font-family: myFont;
 }
 .btn-primary {
   border-radius: 50px;
